# notion-light

./: .gitignore  README-ja.md  README.md
mcp/: pyproject.toml  server.py
skill/notion-best-practices/: SKILL.md
test/: measure_json_size.py  measure_tokens.py  server_light.py  server_original.py  tools_list_light.json  tools_list_original.json
